   - iometer-2003.12.16-IoMtrGlobalDefines5.patch by Daniel Scheibli
     (introduces the IOMTR_SETTING_* global defines to include additional
     code like the VI stuff).
   - iometer-2003.12.16-SwitchesNowRequired.patch by Daniel Scheibli
     (code cleanup of the dynamo parameter handling; switches are no
     longer option but required now)
- Cleanup:
   - Corrected the macro definition for BLKGETSIZE64 in IOCommon.h
   - Corrected the CPU speed detection output as it was proposed
     Kenneth Morse (rounding issue).
   - Changed the "truly batch oriented" patch behaviour (basically rolled
     back the changes due to the bug report of Kris Strecker).
   - Removed an old left over _DETAIL define depended code (for debugging)
     in IOGrunt.cpp.
- Documentation:
   - Added first comments about porting the Dynamo part to the Developers
     Guide.
   - Added first comments about the coding style to the Developers Guide.
- Others:
   - Changed the "Help About..." button of the Iometer Wizard to reflect
     the current status (Open Source,...) of Iometer.
   - Converted the Iometer Wizard to the file format of the 2000 version
     of MS Access and fixed the (Excel) version check of the Graph Wizard
     part (as suggested by Joseph R Gruher).
   - Modified the About dialog to point to the Intel Open Source License
     only.
   - Changed "manager_network_name" to "manager_computer_name" in the
     usage of Dynamo to reflect the value questioned here (as suggested
     by Tony Renna).
   - Modified the Iometer icon to use the new black one instead of the
     old color lightning/spectrum thing.
   - Added an installer for Iometer on Windows (based on the Nullsoft
     Scriptable Install System - NSIS).
   - Changed the Registry Key for the Windows GUI to "iometer.org".
   - Modified the About dialog to reflect the Open Source status of Iometer.
   - Changed the license of the iomtr_kstat module to the GPL.